# fwgui

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  REQUIREMENTS.md  build.rs  build.sh  cm-entry.js  graph-entry.js  package-lock.json  package.json
src/: graph.rs  main.rs  nft.rs  routes.rs  state.rs
static/: cm-bundle.js  editor-bundle.js  graph-bundle.js  graph.html  index.html
ui/: package-lock.json  package.json  vite.config.js
ui/src/: cm.js  editor.js  graph.js  nft-language.js
